css/onboarding.css
.onboarding-Space {
  display: flex;
}

.onboardingSteps-Space {
  display      : flex;
  height: 100%;
  width        : 100%;
  align-content: flex-start;
  align-items  : flex-start;
  overflow  : hidden;

}

.onboarding-steps {
  display        : flex;
  height: 100%;
  width: 100%;
  flex-direction : column;
  align-items    : center;
  justify-content: flex-start;
}

.rules .step-info-main {
  display        : flex;
  height         : 100%;
  gap            : 20px;
  justify-content: space-between;
  flex-direction : column !important;
}

#rulesStep {
  height: 100vh;
}

.tri-colm-img {
  display       : flex;
  flex-direction: row;
  gap           : 40px;
  padding-bottom: 20px;
}

.steps {
  display        : flex;
  flex-direction : column;
  align-items    : center;
  justify-content: flex-start;
  width          : 100%;
  height         : auto;

  
}

.steps-ul {
  height      : 100%;
  margin-left : 32px;
  margin-right: 20px;
  margin-top  : 20px;
}

.getStrtd .steps-ul {
  margin-left : 24px;
  margin-right: 0px;
  margin-top  : 20px;
}

.getStrtd .steps-ul li {
  padding-left: 4px;
}

.steps-ul ul {
  display             : block;
  list-style-type     : disc;
  margin-block        : 0px 1em;
  margin-inline       : 0px;
  padding-inline-start: 20px;
}

.steps-ul ul li {
  margin-bottom       : 10px;
  color               : rgb(52, 167, 134);
  font-size           : x-large;
  padding-inline-start: 16px;
}

.steps-ul ul li p {
  font-size  : clamp(1rem, 2vw, 1rem);
  line-height: clamp(1.5rem, 2vw, 1rem);
  font-family: mulish !important;
}

.steps::-webkit-scrollbar {
  display: none !important;
}

.step-quote-wrapper {
  display         : flex;
  height          : auto;
  place-content   : center flex-start;
  align-items     : center;
  padding         : 4px;
  border-radius   : 8px;
  background-color: rgba(251, 255, 253, 0.7);
}

.step-quote-wrapper h2 {
  white-space: pre-line;
}

.step-info {
  display       : flex;
  flex-direction: column;
  gap           : 40px;
  height        : 100% !important;
  width         : 100% !important;
}

.step-img {
  display            : flex;
  width              : 100%;
  min-height         : 150px;
  background-color   : rgba(85, 76, 125, 0.15);
  border-radius      : 10px;
  background-image   : url("../img/featured-img-8.png");
  mix-blend-mode     : multiply;
  background-position: center center;
  background-size    : cover;
  border             : 1px solid rgb(219, 214, 255);
}

.steps-article {
  display        : flex;
  flex-direction : column;
  justify-content: space-between;
  width          : 100%;
  height         : 100%;
}

.steps-article .Tagline {
  flex-direction: row;
  width         : 100%;
  padding       : 20px;
}

.rules .steps-article .Tagline {
  flex-direction: row;
  width         : 100%;
  padding       : 10px 10px 10px 16px;
}

.rules .steps-article .Tagline::before {
  margin-right: 16px;
  display     : none;
}

.rules p {
  margin-top : 10px;
  margin-left: 16px;
}

.rules .step-quote-wrapper {
  border-radius: 0px 0px 10px 10px;
}

.rules .step-img {
  border-radius: 10px 10px 0px 0px;
}

.steps-article .Tagline::before {
  display         : flex;
  content         : "";
  position        : relative;
  top             : 0px;
  left            : 0px;
  background-image: linear-gradient(to top, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0));
  border          : 2px solid rgb(52, 167, 134);
  border-radius   : 50px;
  width           : 6px;
  margin-right    : 20px;
  height          : 100% !important;
}

.steps-article .Tagline-li {
  flex-direction: row;
  width         : 100%;
  margin-top    : 0px !important;
}

.steps-article .Tagline-li::before {
  content        : "1";
  display        : flex;
  justify-content: center;
  align-items    : center;
  padding        : 10px;
  margin-right   : 10px;
  color          : var(--f7-2ndry-theme-color-tint);
  border         : 2px solid rgb(52, 167, 134);
  border-radius  : 10%;
  width          : 30px;
  height         : 30px;
  font-weight    : 900;
  font-family    : poppins;
  font-size      : 1.3em;
  aspect-ratio   : 1 / 1;
}

.step-info-main {
  display       : flex;
  flex-direction: row-reverse;
  height        : 100%;
  width         : 100%;
  gap           : 40px;
}

.step-main {
  display        : flex;
  flex-direction : column;
  justify-content: space-between;
  padding        : 40px;
  width          : 100%;
  height         : 100%;
  gap            : 20px;

}

.rules {
  display        : flex;
  flex-direction : column;
  justify-content: space-between;
  padding        : 40px;
  width          : 100%;
  gap            : 20px;
}

.steps p {
  color: var(--f7-theme-color);
}

.step {
  display: none;
}

.step-header {
  display         : flex;
  flex-direction  : column;
  border          : 0px solid black;
  background-image: linear-gradient(rgba(130, 120, 198, 0), rgb(140, 126, 223), rgb(106, 93, 182), rgb(94, 80, 178), rgb(94, 80, 178));
  width           : 100%;
  height          : auto;
  padding         : 130px 40px 40px;
  gap             : 20px;
}

.step-header .overline {
  height: auto;
}

.step-header h1,
.overline p {
  display        : flex;
  flex-direction : row;
  color          : aliceblue;
  white-space    : nowrap;
  justify-content: space-between;
}

.overline strong {
  display      : flex;
  opacity      : 1;
  border       : 1px solid rgba(95, 80, 178, 0);
  border-radius: 7px;
  cursor       : pointer;
  width        : fit-content !important;
  height       : fit-content !important;
}

.overline strong p {
  display       : flex;
  color         : rgb(94, 80, 178);
  font-weight   : 500;
  height        : 100%;
  align-items   : center;
  padding-bottom: 0.7px;
}

.overline strong span {
  display    : flex;
  color      : rgb(94, 80, 178);
  font-weight: 500;
  height     : 100%;
  align-items: center;
  transition : all 1s cubic-bezier(0, 1.02, 0, 1.02) 0s;
}

.overline strong span:hover {
  font-weight     : 500;
  height          : 100%;
  padding-left    : 8px;
  margin-top      : 4px;
  align-items     : center;
  border          : 1px solid rgba(95, 80, 178, 0.443);
  border-radius   : 6px;
  background-color: rgb(242, 240, 255);
}

.overline strong span:active {
  padding-left    : 8px;
  margin-top      : 4px;
  scale           : 0.98;
  background-color: rgb(234, 231, 253);
  opacity         : 0.8;
}

.step-nav {
  display: flex;
  width  : 100%;
  gap    : 20px;
}

.mobile-nav {
  display: none;
  width  : 100%;
  gap    : 20px;
}

#onboarding-button {
  display: none;
}

.step-button {
  border-radius  : 8px;
  justify-content: space-between;
  display        : flex !important;
  padding        : 12px !important;
  height         : auto !important;
  width          : 100% !important;
}

.step .next {
  padding-left: 30px !important;
}

.step .back {
  padding-right: 30px !important;
}

.step.active {
  display       : flex;
  height        : 100%;
  width         : 100%;
  flex-direction: column;
  padding       : 0px;
  margin-bottom : 0px;


}

.global-back-btn {
  display    : flex;
  scale      : 1.4;
  border     : 2px solid rgba(52, 167, 134, 0);
  font-weight: 600;
}

@media (min-width: 1055px) and (max-width: 3080px) {
  .onboarding-Space {
    height: 100vh !important;
  }
}

@media (min-width: 580px) and (max-width: 1055px) {
  #rulesStep {
    height: auto !important;
  }

  .step-nav {
    display: flex !important;
  }

  .steps-ul ul {
    margin-right: 40px;
  }

  .mobile-nav {
    display: none;
  }

  .step-info {
    flex-direction: column;
  }

  .tri-colm-img {
    display       : flex;
    gap           : 40px;
    flex-direction: column !important;
    padding-bottom: 40px !important;
  }

  .onboarding-page {
    grid-template: "header"auto "content"auto / 1fr;
  }

  .onboarding-page .header {
    padding: clamp(32px, 4rem, 80px);
  }

  .onboarding-page .content {
    padding: 2rem;
  }

  .onboarding-page .form-container {
    width: clamp(400px, 80vw, 500px);
  }
}

@media (min-width: 370px) and (max-width: 579px) {
  #rulesStep {
    height: auto !important;
  }

  .step-nav {
    display: none !important;
  }

  .mobile-nav {
    display: flex;
  }

  .step-info {
    gap: 20px;
  }

  .step-info-main {
    gap           : 20px;
    flex-direction: column-reverse !important;
  }

  .rules .step-quote-wrapper {
    margin: 0px;
  }

  .tri-colm-img {
    display       : flex;
    gap           : 40px;
    padding-bottom: 20px;
    flex-direction: column !important;
  }

  .step-main {
    padding: 20px !important;
  }

  .step-header {
    padding: 120px 20px 20px;
  }

  .steps-article .Tagline-li {
    flex-direction: row;
    width         : 100%;
  }

  .steps-ul {
    margin-left: 32px;
    margin-top : 10px;
  }

  .getStrtd .steps-ul {
    margin-left : 25px;
    margin-right: 10px;
    margin-top  : 10px;
  }

  .steps-article {
    height: auto;
  }

  .onboarding-page {
    grid-template: "header"auto "content"auto / 1fr;
  }

  .onboarding-page .header {
    padding: 2rem;
  }

  .onboarding-page .content {
    padding: 1rem;
  }

  .onboarding-page .form-container {
    width: clamp(300px, 90vw, 400px);
  }
}

@media (min-width: 200px) and (max-width: 369px) {
  #rulesStep {
    height: auto !important;
  }

  .step-nav {
    display: none !important;
  }

  .mobile-nav {
    display: flex;
  }

  .steps-article {
    height: auto;
  }

  .step-info {
    gap: 20px;
  }

  .step-info-main {
    gap           : 20px;
    flex-direction: column-reverse !important;
  }

  .step-main {
    padding: 20px 20px 80px !important;
  }

  .tri-colm-img {
    display       : flex;
    gap           : 40px;
    flex-direction: column !important;
  }

  .onboarding-page {
    grid-template: "header"auto "content"auto / 1fr;
  }

  .onboarding-page {
    grid-template: "header"auto "content"auto / 1fr;
  }

  .onboarding-page .header {
    padding: 1rem;
  }

  .step-header {
    padding-right : 20px;
    padding-bottom: 20px;
    padding-left  : 20px;
    padding-top   : 100px !important;
  }

  .onboarding-page .content {
    padding: 0.5rem;
  }

  .onboarding-page .form-container {
    width: clamp(280px, 90vw, 350px);
  }
}

@media (min-width: 1px) and (max-width: 260px) {
  .step-nav {
    display: none !important;
  }

  .mobile-nav {
    display: flex;
  }

  .step-nav {
    display: none !important;
  }

  .mobile-nav {
    display: flex;
  }

  .steps-article {
    height: auto;
  }

  .step-info {
    gap: 20px;
  }

  .step-info-main {
    gap           : 20px;
    flex-direction: column-reverse !important;
  }

  .step-main {
    padding: 20px !important;
  }

  .step-quote-wrapper {
    margin: 20px 0px;
  }

  .onboarding-page {
    grid-template: "header"auto "content"auto / 1fr;
  }

  .step-header {
    padding: 20px !important;
  }

  .onboarding-page .header {
    padding: 0.5rem;
  }

  .onboarding-page .content {
    padding: 0.25rem;
  }

  .onboarding-page .form-container {
    width: clamp(200px, 80vw, 280px);
  }
}

